[gd_scene load_steps=10 format=3 uid="uid://di0tlmyg1ok6"]

[ext_resource type="Script" path="res://WineMaker.gd" id="1_l0ed5"]
[ext_resource type="Texture2D" uid="uid://hdcxtumrdj8j" path="res://Scene asset/bloodmaker (2).png" id="2_5m344"]

[sub_resource type="AtlasTexture" id="AtlasTexture_huwti"]
atlas = ExtResource("2_5m344")
region = Rect2(0, 0, 193, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1kbg"]
atlas = ExtResource("2_5m344")
region = Rect2(193, 0, 193, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3l3d"]
atlas = ExtResource("2_5m344")
region = Rect2(386, 0, 193, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0bpg"]
atlas = ExtResource("2_5m344")
region = Rect2(579, 0, 193, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmhdf"]
atlas = ExtResource("2_5m344")
region = Rect2(772, 0, 193, 129)

[sub_resource type="SpriteFrames" id="SpriteFrames_17ggm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_huwti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1kbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3l3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0bpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmhdf")
}],
"loop": true,
"name": &"make_wine",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ae4j"]
size = Vector2(125, 121)

[node name="WineMaker" type="Area2D"]
script = ExtResource("1_l0ed5")

[node name="Wine_maker" type="AnimatedSprite2D" parent="."]
position = Vector2(143.369, 144.203)
scale = Vector2(0.586852, 0.623308)
sprite_frames = SubResource("SpriteFrames_17ggm")
animation = &"make_wine"
frame = 1
frame_progress = 0.972336

[node name="clickArea" type="CollisionShape2D" parent="."]
position = Vector2(161.5, 140.5)
shape = SubResource("RectangleShape2D_7ae4j")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
